<resources>
    <string name="app_name">PublicTransitPlanner</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username_hint">Username</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="directions_button_text">Get Directions</string>
    <string name="location">Location</string>
    <string name="destination">Destination</string>
    <string name="your_name_hint">Your name</string>
    <string name="register_dialog">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="current_location">Use Current Location</string>
    <string name="choose_location">Launch Place Picker</string>
    <string name="choose_desination">Choose Desination</string>
    <string name="view_map">View Map</string>
    <string name="add_marker_title">Add a marker for (%1$.1f, %2$.1f)</string>

    <string name="dialog_add_marker_edit_text_title_hint">Title</string>
    <string name="dialog_add_marker_edit_text_snippet_hint">Enter a short snippet (optional)</string>
    <string name="use_location_picker">Use Location Picker</string>
    <string name="edit_marker_title">Edit Marker</string>
    <string name="remove_marker">Remove Marker</string>
</resources>
